Bug 522255 - Crash in UpdateModel::setResources() during an update
Summary: Crash in UpdateModel::setResources() during an update
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 6.7.0
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2026-06-26 22:23 UTC by Yohan Simard
Modified: 2026-07-20 01:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.4
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/456027/events/b0a68ec585194f4089611197e3ddc059/


Attachments
New crash information added by DrKonqi (71.48 KB, text/plain)
2026-06-26 22:23 UTC, Yohan Simard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yohan Simard 2026-06-26 22:23:55 UTC
Application: plasma-discover (6.7.0)

ApplicationNotResponding [ANR]: false
Qt Version: 6.11.1
Frameworks Version: 6.27.0
Operating System: Linux 7.0.12-201.fc44.x86_64 x86_64
Windowing System: Wayland
Distribution: "Fedora Linux 44 (KDE Plasma Desktop Edition)"
DrKonqi: 6.7.0 [CoredumpBackend]

-- Information about the crash:
- I updated my system within Discover (about 30 packages, ~1.2 GB).
- The update finished normally, the icon asking for a reboot appeared in the tray.
- Discover then automatically refreshed the view and found another update: Microsoft dbx
- I clicked install, and shortly after that Discover crashed.

I now do not see the Microsoft dbx update anymore in Discover.

The reporter is unsure if this crash is reproducible.

-- Backtrace (Reduced):
#4  0x00007f2e6297866a in QObject::disconnect (sender=0x559ddaa0bdb0, signal=<optimized out>, receiver=0x559dd877e220, method=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp:3392
#5  0x00007f2e658b1d9c in UpdateModel::setResources (this=0x559dd877e220, resources=...) at /usr/src/debug/plasma-discover-6.7.0-1.fc44.x86_64/libdiscover/UpdateModel/UpdateModel.cpp:247
#6  0x00007f2e658b2005 in UpdateModel::setResources (this=this@entry=0x559dd877e220, resources=...) at /usr/src/debug/plasma-discover-6.7.0-1.fc44.x86_64/libdiscover/UpdateModel/UpdateModel.cpp:244
#7  0x00007f2e658b4599 in UpdateModel::activityChanged (this=0x559dd877e220) at /usr/src/debug/plasma-discover-6.7.0-1.fc44.x86_64/libdiscover/UpdateModel/UpdateModel.cpp:96
#8  UpdateModel::activityChanged (this=0x559dd877e220) at /usr/src/debug/plasma-discover-6.7.0-1.fc44.x86_64/libdiscover/UpdateModel/UpdateModel.cpp:91
#9  0x00007f2e62984eb7 in QtPrivate::QSlotObjectBase::call (this=<optimized out>, r=0x559dd877e220, a=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobjectdefs_impl.h:462
#10 doActivate<false> (sender=<optimized out>, signal_index=<optimized out>, argv=argv@entry=0x7ffd0a92b8a0) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp:4372
[...]
#13 ResourcesModel::updatesCountChanged (this=<optimized out>, _t1=<optimized out>) at /usr/src/debug/plasma-discover-6.7.0-1.fc44.x86_64/redhat-linux-build/libdiscover/DiscoverCommon_autogen/include/moc_ResourcesModel.cpp:490
#14 0x00007f2e658b8448 in std::function<void(int)>::operator() (this=0x559dd7ada3c8, __args#0=<optimized out>) at /usr/include/c++/16/bits/std_function.h:581
#15 EmitWhenChanged<int>::reevaluate (this=0x559dd7ada3a8) at /usr/src/debug/plasma-discover-6.7.0-1.fc44.x86_64/libdiscover/resources/ResourcesModel.h:61
#16 operator() (__closure=<optimized out>) at /usr/src/debug/plasma-discover-6.7.0-1.fc44.x86_64/libdiscover/resources/ResourcesModel.cpp:157
#17 operator() (__closure=<optimized out>) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:117
#21 QtPrivate::QCallableObject<ResourcesModel::addResourcesBackend(AbstractResourcesBackend*)::<lambda()>, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=<optimized out>, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt6/QtCore/qobjectdefs_impl.h:548
#22 0x00007f2e62984eb7 in QtPrivate::QSlotObjectBase::call (this=<optimized out>, r=0x559dd7ada360, a=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobjectdefs_impl.h:462
#23 doActivate<false> (sender=<optimized out>, signal_index=<optimized out>, argv=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobject.cpp:4372
#24 0x00007f2e62984eb7 in QtPrivate::QSlotObjectBase::call (this=<optimized out>, r=0x559dd7bb8a80, a=<optimized out>) at /usr/src/debug/qt6-qtbase-6.11.1-1.fc44.x86_64/src/corelib/kernel/qobjectdefs_impl.h:462


Reported using DrKonqi
Comment 1 Yohan Simard 2026-06-26 22:23:56 UTC
Created attachment 193762 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Bug Janitor Service 2026-07-05 17:41:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1353
Comment 3 Aleix Pol 2026-07-16 09:12:05 UTC
Git commit b3e5d9442f9adb9864d3e20c70b7615230c10993 by Aleix Pol Gonzalez, on behalf of Aleix Pol i Gonzalez.
Committed on 16/07/2026 at 09:11.
Pushed by apol into branch 'master'.

UpdatesModel: Remove destroyed resources

We do not want stale resources in the stored list.

M  +10   -0    libdiscover/UpdateModel/UpdateModel.cpp

https://invent.kde.org/plasma/discover/-/commit/b3e5d9442f9adb9864d3e20c70b7615230c10993
Comment 4 Aleix Pol 2026-07-16 22:54:53 UTC
Git commit 119919e844eaeb0bf38a009af23733feb7c9f860 by Aleix Pol Gonzalez.
Committed on 16/07/2026 at 09:12.
Pushed by ngraham into branch 'Plasma/6.7'.

UpdatesModel: Remove destroyed resources

We do not want stale resources in the stored list.


(cherry picked from commit b3e5d9442f9adb9864d3e20c70b7615230c10993)

Co-authored-by: Aleix Pol i Gonzalez <aleixpol@kde.org>

M  +10   -0    libdiscover/UpdateModel/UpdateModel.cpp

https://invent.kde.org/plasma/discover/-/commit/119919e844eaeb0bf38a009af23733feb7c9f860
Comment 5 Aleix Pol 2026-07-20 01:25:23 UTC
Git commit 021b7da82c3e8190a300f0352a2c79f78bd38e14 by Aleix Pol Gonzalez.
Committed on 16/07/2026 at 09:13.
Pushed by apol into branch 'Plasma/6.6'.

UpdatesModel: Remove destroyed resources

We do not want stale resources in the stored list.


(cherry picked from commit b3e5d9442f9adb9864d3e20c70b7615230c10993)

Co-authored-by: Aleix Pol i Gonzalez <aleixpol@kde.org>

M  +10   -0    libdiscover/UpdateModel/UpdateModel.cpp

https://invent.kde.org/plasma/discover/-/commit/021b7da82c3e8190a300f0352a2c79f78bd38e14