UpdatesModel: Remove destroyed resources

We do not want stale resources in the stored list.

BUG: 522255


(cherry picked from commit b3e5d9442f9adb9864d3e20c70b7615230c10993)

Co-authored-by: Aleix Pol i Gonzalez <aleixpol@kde.org>